--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OtherTesting"></activity>
+        <activity android:name=".SelfTesting"></activity>
+        <activity android:name=".OtherTesting" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
