--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.google.firebase:firebase-ml-vision:24.0.2'
